JDK-8236829 : JDK-8232102 backport breaks s390
  • Type: Bug
  • Component: hotspot
  • Sub-Component: gc
  • Affected Version: 8-shenandoah,11-shenandoah,14,15
  • Priority: P4
  • Status: Resolved
  • Resolution: Fixed
  • OS: linux
  • CPU: other
  • Submitted: 2020-01-09
  • Updated: 2025-10-15
  • Resolved: 2025-10-15
The Version table provides details related to the release that this issue/RFE will be addressed.

Unresolved : Release in which this issue/RFE will be addressed.
Resolved: Release in which this issue/RFE has been resolved.
Fixed : Release in which this issue/RFE has been fixed. The release containing this fix may be available for download as an Early Access Release or a General Availability Release.

To download the current JDK release, click here.
Other
tbdFixed
Related Reports
Relates :  
Description
The backport of JDK-8232102 to the 8u Shenandoah port - specifically the use of byte_size_in_proper_unit - broke the build on s390 (31-bit). This is the recurring problem that size_t and uint are not the same on this platform.

Hence we get several format warnings such as:

/builddir/build/BUILD/java-1.8.0-openjdk-1.8.0.242.b05-0.1.ea.el7.s390/openjdk/hotspot/src/share/vm/gc_implementation/shenandoah
/shenandoahHeapRegion.cpp: In static member function 'static void ShenandoahHeapRegion::setup_sizes(size_t)':
/builddir/build/BUILD/java-1.8.0-openjdk-1.8.0.242.b05-0.1.ea.el7.s390/openjdk/hotspot/src/share/vm/gc_implementation/shenandoah
/shenandoahHeapRegion.cpp:482:124: error: format '%zu' expects argument of type 'size_t', but argument 6 has type 'unsigned int'
 [-Werror=format=]
                       byte_size_in_proper_unit(ShenandoahMinRegionSize), proper_unit_for_byte_size(ShenandoahMinRegionSize));

Forcing byte_size_in_proper_unit to use size_t, as we did before in https://hg.openjdk.java.net/aarch64-port/jdk8u-shenandoah/hotspot/rev/ad280373e7cc, fixes the problem.

Comments
Comments indicate this could be fixed. It's been 5 years. If this is still an active issue, please reopen.
15-10-2025

We're cleaning up the Shenandoah backlog. Assigning this to myself and stopping work as it seems no updates have been made in a few years.
11-08-2025

[~andrew] is this still relevant?
15-06-2020

Fixed in aarch64-port/shenandoah-jdk8u: https://hg.openjdk.java.net/aarch64-port/jdk8u-shenandoah/hotspot/rev/b8f57556a61f
13-01-2020

RFR: https://mail.openjdk.java.net/pipermail/shenandoah-dev/2020-January/011287.html
09-01-2020

Fix applied in RPMs, just needs upstreaming.
09-01-2020