8236829: JDK-8232102 backport breaks s390 Summary: Cast Shenandoah{Min,Max,Heap}RegionSize to size_t for byte_size_in_proper_unit Reviewed-by: rkennke